--- a/project/templates/product.html
+++ b/project/templates/product.html
@@ -1,15 +1,12 @@
 <!--  наследуемся от шаблона default.html, который мы создавали для flatpages -->
 {% extends 'flatpages/default.html' %}
-{% load custom_filters %}
+
 <!-- Название у нас будет Product -->
 {% block title %}
-Post
+Product
 {% endblock title %}
 
 <!-- В контенте на странице мы выводим сам товар, идентификатор которого был передан в url -->
 {% block content %}
-    <h1>{{ post.title|sensor }}</h1>
-    <i><h3>{{ post.date_in|date:"d F Y" }}</h3></i>
-    <hr>
-    <h3>{{ post.text|sensor }}</h3>
+<h1>{{ product }}</h1>
 {% endblock content %}
