--- a/project/templates/protect/index.html
+++ b/project/templates/protect/index.html
@@ -16,4 +16,5 @@ User
     {% if is_not_authors %}
     <a href="sign/upgrade/" class="btn btn-sm btn-secondary"> Хочу стать автором!</a>
     {% endif %}
+</div>
 {% endblock content %}
